Fix margin of login page logo. Was forcing a text wrap because I forgot to add the 0 for margin-left/right

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -3475,7 +3475,7 @@ a.github-fork {
 	}
 	.logo {
 		//display: block;
-		margin: 50px;
+		margin: 50px 0;
 		font-family: 'Oswald';
 		text-transform: uppercase;
 		font-size: 3em;
@@ -3726,7 +3726,7 @@ a.github-fork {
 
 // ** START EB ZONE *********************************
 
-// Hack to allow sidebar collapse on all viewport sizes -- 
+// Hack to allow sidebar collapse on all viewport sizes --
 // Due to the 'menu-closed' class being attached at all times since
 // it is used to hide the sidebar at viewport sizes below 780px
 // I had to reverse the logistics of the menu-closed/menu-opened classes
